implemented grocery working day detail dialog
